@@ -1,51 +1,0 @@
-gym[atari]
-autorom
-imageio-ffmpeg
-numpy
-psutil
-pynvml
-pytz
-scikit_learn
-opencv-python
-pygame==2.1.2
-networkx
-matplotlib
-
-# freeze output
-# ale-py==0.7.5
-# AutoROM==0.4.2
-# certifi==2022.6.15
-# charset-normalizer==2.1.0
-# click==8.1.3
-# cloudpickle==2.1.0
-# cycler==0.11.0
-# fonttools==4.34.4
-# gym==0.25.1
-# gym-notices==0.0.7
-# idna==3.3
-# importlib-metadata==4.12.0
-# importlib-resources==5.9.0
-# joblib==1.1.0
-# kiwisolver==1.4.4
-# matplotlib==3.5.2
-# networkx==2.8.5
-# numpy==1.23.1
-# opencv-python==4.6.0.66
-# packaging==21.3
-# Pillow==9.2.0
-# psutil==5.9.1
-# pygame==2.1.2
-# pynvml==11.4.1
-# pyparsing==3.0.9
-# python-dateutil==2.8.2
-# pytz==2022.1
-# requests==2.28.1
-# scikit-learn==1.1.1
-# scipy==1.9.0
-# six==1.16.0
-# threadpoolctl==3.1.0
-# torch==1.12.1
-# tqdm==4.64.0
-# typing_extensions @ file:///home/conda/feedstock_root/build_artifacts/typing_extensions_1656706066251/work
-# urllib3==1.26.11
-# zipp==3.8.1
